test/parallel/forall/task-private-vars/use-before-def.good
use-before-def.chpl:4: error: 'tpv2' used before defined (first used here)
